Labirinto/LabParser.cpp

// Generated from Lab.g4 by ANTLR 4.9.3


#include "LabListener.h"
#include "LabVisitor.h"

#include "LabParser.h"


using namespace antlrcpp;
using namespace antlr4;

LabParser::LabParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

LabParser::~LabParser() {
  delete _interpreter;
}

std::string LabParser::getGrammarFileName() const {
  return "Lab.g4";
}

const std::vector<std::string>& LabParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& LabParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

LabParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LabParser::ProgramContext::EOF() {
  return getToken(LabParser::EOF, 0);
}

LabParser::StatContext* LabParser::ProgramContext::stat() {
  return getRuleContext<LabParser::StatContext>(0);
}


size_t LabParser::ProgramContext::getRuleIndex() const {
  return LabParser::RuleProgram;
}

void LabParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void LabParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any LabParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

LabParser::ProgramContext* LabParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LabParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LabParser::T__1

    || _la == LabParser::T__7) {
      setState(24);
      stat();
    }
    setState(27);
    match(LabParser::T__0);
    setState(29);
    match(LabParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

LabParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LabParser::LabirintoContext* LabParser::StatContext::labirinto() {
  return getRuleContext<LabParser::LabirintoContext>(0);
}

LabParser::GridContext* LabParser::StatContext::grid() {
  return getRuleContext<LabParser::GridContext>(0);
}


size_t LabParser::StatContext::getRuleIndex() const {
  return LabParser::RuleStat;
}

void LabParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void LabParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}


antlrcpp::Any LabParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

LabParser::StatContext* LabParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 2, LabParser::RuleStat);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(41);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(31);
      labirinto();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(32);
      grid();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(33);
      grid();
      setState(34);
      match(LabParser::T__0);
      setState(35);
      labirinto();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(37);
      labirinto();
      setState(38);
      match(LabParser::T__0);
      setState(39);
      grid();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GridContext ------------------------------------------------------------------

LabParser::GridContext::GridContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LabParser::PositionContext *> LabParser::GridContext::position() {
  return getRuleContexts<LabParser::PositionContext>();
}

LabParser::PositionContext* LabParser::GridContext::position(size_t i) {
  return getRuleContext<LabParser::PositionContext>(i);
}


size_t LabParser::GridContext::getRuleIndex() const {
  return LabParser::RuleGrid;
}

void LabParser::GridContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGrid(this);
}

void LabParser::GridContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGrid(this);
}


antlrcpp::Any LabParser::GridContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitGrid(this);
  else
    return visitor->visitChildren(this);
}

LabParser::GridContext* LabParser::grid() {
  GridContext *_localctx = _tracker.createInstance<GridContext>(_ctx, getState());
  enterRule(_localctx, 4, LabParser::RuleGrid);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    match(LabParser::T__1);
    setState(44);
    match(LabParser::T__2);
    setState(50);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LabParser::T__4) {
      setState(45);
      position();
      setState(46);
      match(LabParser::T__0);
      setState(52);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(53);
    match(LabParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PositionContext ------------------------------------------------------------------

LabParser::PositionContext::PositionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LabParser::CoordenadasContext* LabParser::PositionContext::coordenadas() {
  return getRuleContext<LabParser::CoordenadasContext>(0);
}

tree::TerminalNode* LabParser::PositionContext::INT() {
  return getToken(LabParser::INT, 0);
}


size_t LabParser::PositionContext::getRuleIndex() const {
  return LabParser::RulePosition;
}

void LabParser::PositionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPosition(this);
}

void LabParser::PositionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPosition(this);
}


antlrcpp::Any LabParser::PositionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitPosition(this);
  else
    return visitor->visitChildren(this);
}

LabParser::PositionContext* LabParser::position() {
  PositionContext *_localctx = _tracker.createInstance<PositionContext>(_ctx, getState());
  enterRule(_localctx, 6, LabParser::RulePosition);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    match(LabParser::T__4);
    setState(56);
    coordenadas();
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LabParser::T__5) {
      setState(57);
      match(LabParser::T__5);
      setState(58);
      match(LabParser::T__6);
      setState(59);
      match(LabParser::INT);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LabirintoContext ------------------------------------------------------------------

LabParser::LabirintoContext::LabirintoContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LabParser::LabirintoContext::ID() {
  return getToken(LabParser::ID, 0);
}

std::vector<LabParser::NumContext *> LabParser::LabirintoContext::num() {
  return getRuleContexts<LabParser::NumContext>();
}

LabParser::NumContext* LabParser::LabirintoContext::num(size_t i) {
  return getRuleContext<LabParser::NumContext>(i);
}

std::vector<LabParser::DlabContext *> LabParser::LabirintoContext::dlab() {
  return getRuleContexts<LabParser::DlabContext>();
}

LabParser::DlabContext* LabParser::LabirintoContext::dlab(size_t i) {
  return getRuleContext<LabParser::DlabContext>(i);
}


size_t LabParser::LabirintoContext::getRuleIndex() const {
  return LabParser::RuleLabirinto;
}

void LabParser::LabirintoContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLabirinto(this);
}

void LabParser::LabirintoContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLabirinto(this);
}


antlrcpp::Any LabParser::LabirintoContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitLabirinto(this);
  else
    return visitor->visitChildren(this);
}

LabParser::LabirintoContext* LabParser::labirinto() {
  LabirintoContext *_localctx = _tracker.createInstance<LabirintoContext>(_ctx, getState());
  enterRule(_localctx, 8, LabParser::RuleLabirinto);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(LabParser::T__7);
    setState(63);
    match(LabParser::T__8);
    setState(64);
    match(LabParser::T__9);
    setState(65);
    match(LabParser::T__6);
    setState(66);
    match(LabParser::ID);
    setState(67);
    match(LabParser::T__10);
    setState(68);
    match(LabParser::T__6);
    setState(69);
    num();
    setState(70);
    match(LabParser::T__11);
    setState(71);
    match(LabParser::T__6);
    setState(72);
    num();
    setState(73);
    match(LabParser::T__12);
    setState(74);
    match(LabParser::T__2);
    setState(80);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LabParser::T__13)
      | (1ULL << LabParser::T__14)
      | (1ULL << LabParser::T__16)
      | (1ULL << LabParser::T__17))) != 0)) {
      setState(75);
      dlab();
      setState(76);
      match(LabParser::T__0);
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(83);
    match(LabParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DlabContext ------------------------------------------------------------------

LabParser::DlabContext::DlabContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LabParser::TargetContext* LabParser::DlabContext::target() {
  return getRuleContext<LabParser::TargetContext>(0);
}

LabParser::BeaconContext* LabParser::DlabContext::beacon() {
  return getRuleContext<LabParser::BeaconContext>(0);
}

LabParser::SpotContext* LabParser::DlabContext::spot() {
  return getRuleContext<LabParser::SpotContext>(0);
}

LabParser::RowContext* LabParser::DlabContext::row() {
  return getRuleContext<LabParser::RowContext>(0);
}


size_t LabParser::DlabContext::getRuleIndex() const {
  return LabParser::RuleDlab;
}

void LabParser::DlabContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDlab(this);
}

void LabParser::DlabContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDlab(this);
}


antlrcpp::Any LabParser::DlabContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitDlab(this);
  else
    return visitor->visitChildren(this);
}

LabParser::DlabContext* LabParser::dlab() {
  DlabContext *_localctx = _tracker.createInstance<DlabContext>(_ctx, getState());
  enterRule(_localctx, 10, LabParser::RuleDlab);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(89);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LabParser::T__14: {
        enterOuterAlt(_localctx, 1);
        setState(85);
        target();
        break;
      }

      case LabParser::T__13: {
        enterOuterAlt(_localctx, 2);
        setState(86);
        beacon();
        break;
      }

      case LabParser::T__16: {
        enterOuterAlt(_localctx, 3);
        setState(87);
        spot();
        break;
      }

      case LabParser::T__17: {
        enterOuterAlt(_localctx, 4);
        setState(88);
        row();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BeaconContext ------------------------------------------------------------------

LabParser::BeaconContext::BeaconContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LabParser::CoordenadasContext* LabParser::BeaconContext::coordenadas() {
  return getRuleContext<LabParser::CoordenadasContext>(0);
}

tree::TerminalNode* LabParser::BeaconContext::INT() {
  return getToken(LabParser::INT, 0);
}


size_t LabParser::BeaconContext::getRuleIndex() const {
  return LabParser::RuleBeacon;
}

void LabParser::BeaconContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBeacon(this);
}

void LabParser::BeaconContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBeacon(this);
}


antlrcpp::Any LabParser::BeaconContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitBeacon(this);
  else
    return visitor->visitChildren(this);
}

LabParser::BeaconContext* LabParser::beacon() {
  BeaconContext *_localctx = _tracker.createInstance<BeaconContext>(_ctx, getState());
  enterRule(_localctx, 12, LabParser::RuleBeacon);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(LabParser::T__13);
    setState(92);
    match(LabParser::T__6);
    setState(93);
    coordenadas();
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LabParser::T__11) {
      setState(94);
      match(LabParser::T__11);
      setState(95);
      match(LabParser::T__6);
      setState(96);
      match(LabParser::INT);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TargetContext ------------------------------------------------------------------

LabParser::TargetContext::TargetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LabParser::CoordenadasContext* LabParser::TargetContext::coordenadas() {
  return getRuleContext<LabParser::CoordenadasContext>(0);
}

LabParser::NumContext* LabParser::TargetContext::num() {
  return getRuleContext<LabParser::NumContext>(0);
}


size_t LabParser::TargetContext::getRuleIndex() const {
  return LabParser::RuleTarget;
}

void LabParser::TargetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTarget(this);
}

void LabParser::TargetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTarget(this);
}


antlrcpp::Any LabParser::TargetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitTarget(this);
  else
    return visitor->visitChildren(this);
}

LabParser::TargetContext* LabParser::target() {
  TargetContext *_localctx = _tracker.createInstance<TargetContext>(_ctx, getState());
  enterRule(_localctx, 14, LabParser::RuleTarget);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    match(LabParser::T__14);
    setState(100);
    match(LabParser::T__6);
    setState(101);
    coordenadas();
    setState(105);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LabParser::T__15) {
      setState(102);
      match(LabParser::T__15);
      setState(103);
      match(LabParser::T__6);

      setState(104);
      num();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SpotContext ------------------------------------------------------------------

LabParser::SpotContext::SpotContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LabParser::CoordenadasContext* LabParser::SpotContext::coordenadas() {
  return getRuleContext<LabParser::CoordenadasContext>(0);
}

tree::TerminalNode* LabParser::SpotContext::INT() {
  return getToken(LabParser::INT, 0);
}

LabParser::NumContext* LabParser::SpotContext::num() {
  return getRuleContext<LabParser::NumContext>(0);
}


size_t LabParser::SpotContext::getRuleIndex() const {
  return LabParser::RuleSpot;
}

void LabParser::SpotContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSpot(this);
}

void LabParser::SpotContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSpot(this);
}


antlrcpp::Any LabParser::SpotContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitSpot(this);
  else
    return visitor->visitChildren(this);
}

LabParser::SpotContext* LabParser::spot() {
  SpotContext *_localctx = _tracker.createInstance<SpotContext>(_ctx, getState());
  enterRule(_localctx, 16, LabParser::RuleSpot);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(LabParser::T__16);
    setState(108);
    match(LabParser::T__6);
    setState(109);
    coordenadas();
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LabParser::T__11) {
      setState(110);
      match(LabParser::T__11);
      setState(111);
      match(LabParser::T__6);
      setState(112);
      match(LabParser::INT);
    }
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LabParser::T__15) {
      setState(115);
      match(LabParser::T__15);
      setState(116);
      match(LabParser::T__6);

      setState(117);
      num();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RowContext ------------------------------------------------------------------

LabParser::RowContext::RowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LabParser::RowContext::INT() {
  return getToken(LabParser::INT, 0);
}

tree::TerminalNode* LabParser::RowContext::PADRAO() {
  return getToken(LabParser::PADRAO, 0);
}


size_t LabParser::RowContext::getRuleIndex() const {
  return LabParser::RuleRow;
}

void LabParser::RowContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRow(this);
}

void LabParser::RowContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRow(this);
}


antlrcpp::Any LabParser::RowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitRow(this);
  else
    return visitor->visitChildren(this);
}

LabParser::RowContext* LabParser::row() {
  RowContext *_localctx = _tracker.createInstance<RowContext>(_ctx, getState());
  enterRule(_localctx, 18, LabParser::RuleRow);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(LabParser::T__17);
    setState(121);
    match(LabParser::INT);
    setState(122);
    match(LabParser::T__18);
    setState(123);
    match(LabParser::PADRAO);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CoordenadasContext ------------------------------------------------------------------

LabParser::CoordenadasContext::CoordenadasContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LabParser::NumContext *> LabParser::CoordenadasContext::num() {
  return getRuleContexts<LabParser::NumContext>();
}

LabParser::NumContext* LabParser::CoordenadasContext::num(size_t i) {
  return getRuleContext<LabParser::NumContext>(i);
}


size_t LabParser::CoordenadasContext::getRuleIndex() const {
  return LabParser::RuleCoordenadas;
}

void LabParser::CoordenadasContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCoordenadas(this);
}

void LabParser::CoordenadasContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCoordenadas(this);
}


antlrcpp::Any LabParser::CoordenadasContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitCoordenadas(this);
  else
    return visitor->visitChildren(this);
}

LabParser::CoordenadasContext* LabParser::coordenadas() {
  CoordenadasContext *_localctx = _tracker.createInstance<CoordenadasContext>(_ctx, getState());
  enterRule(_localctx, 20, LabParser::RuleCoordenadas);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(LabParser::T__8);
    setState(126);
    num();
    setState(127);
    match(LabParser::T__19);
    setState(128);
    num();
    setState(129);
    match(LabParser::T__12);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumContext ------------------------------------------------------------------

LabParser::NumContext::NumContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LabParser::NumContext::DOUBLE() {
  return getToken(LabParser::DOUBLE, 0);
}

tree::TerminalNode* LabParser::NumContext::INT() {
  return getToken(LabParser::INT, 0);
}


size_t LabParser::NumContext::getRuleIndex() const {
  return LabParser::RuleNum;
}

void LabParser::NumContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNum(this);
}

void LabParser::NumContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LabListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNum(this);
}


antlrcpp::Any LabParser::NumContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LabVisitor*>(visitor))
    return parserVisitor->visitNum(this);
  else
    return visitor->visitChildren(this);
}

LabParser::NumContext* LabParser::num() {
  NumContext *_localctx = _tracker.createInstance<NumContext>(_ctx, getState());
  enterRule(_localctx, 22, LabParser::RuleNum);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    _la = _input->LA(1);
    if (!(_la == LabParser::INT

    || _la == LabParser::DOUBLE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

// Static vars and initialization.
std::vector<dfa::DFA> LabParser::_decisionToDFA;
atn::PredictionContextCache LabParser::_sharedContextCache;

// We own the ATN which in turn owns the ATN states.
atn::ATN LabParser::_atn;
std::vector<uint16_t> LabParser::_serializedATN;

std::vector<std::string> LabParser::_ruleNames = {
  "program", "stat", "grid", "position", "labirinto", "dlab", "beacon", 
  "target", "spot", "row", "coordenadas", "num"
};

std::vector<std::string> LabParser::_literalNames = {
  "", "';'", "'GRID'", "'{'", "'}'", "'POS'", "'DIRECTION'", "'='", "'LABIRINTO'", 
  "'('", "'NAME'", "'WIDTH'", "'HEIGHT'", "')'", "'BEACON'", "'TARGET'", 
  "'RADIUS'", "'SPOT'", "'ROW'", "':'", "','"
};

std::vector<std::string> LabParser::_symbolicNames = {
  "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
  "", "", "", "INT", "DOUBLE", "ID", "PADRAO", "WS", "LINE_COMMENT", "MULTILINE_COMMENT"
};

dfa::Vocabulary LabParser::_vocabulary(_literalNames, _symbolicNames);

std::vector<std::string> LabParser::_tokenNames;

LabParser::Initializer::Initializer() {
	for (size_t i = 0; i < _symbolicNames.size(); ++i) {
		std::string name = _vocabulary.getLiteralName(i);
		if (name.empty()) {
			name = _vocabulary.getSymbolicName(i);
		}

		if (name.empty()) {
			_tokenNames.push_back("<INVALID>");
		} else {
      _tokenNames.push_back(name);
    }
	}


  _serializedATN.insert(_serializedATN.end(), serializedATNSegment0,
    serializedATNSegment0 + sizeof(serializedATNSegment0) / sizeof(serializedATNSegment0[0]));


  atn::ATNDeserializer deserializer;
  _atn = deserializer.deserialize(_serializedATN);

  size_t count = _atn.getNumberOfDecisions();
  _decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    _decisionToDFA.emplace_back(_atn.getDecisionState(i), i);
  }
}

LabParser::Initializer LabParser::_init;
